# zephyr-native-bridge

./: CMakeLists.txt
cmake/: CopyIncludes.cmake  Dependencies.cmake  Platform.cmake  TargetConfig.cmake  Test.cmake
cpp/: CMakeLists.txt  Dependencies.cmake  Platform.cmake  external_dependencies.cmake
cpp/include/: vm_management.hpp  vm_object.hpp
cpp/include/debug/: vm_dynamic_util.hpp  vm_object.hpp
cpp/include/jni/: Dispatcher.hpp  dispatcher.hpp  invoker.hpp  method.hpp
cpp/include/jni/proxies/: KlassProxy.hpp  MethodProxy.hpp  klass_proxy.hpp  method_proxy.hpp
cpp/main/include/: debug.hpp  vm_management.hpp  vm_object.hpp
cpp/main/include/ZNBKit/: debug.hpp  vm_management.hpp  vm_object.hpp
cpp/main/include/ZNBKit/jni/: buffer.hpp  instance.hpp
cpp/main/include/ZNBKit/jni/signatures/: klass_signature.hpp  method_signature.hpp
cpp/main/include/ZNBKit/jni/signatures/method/: byte_method.hpp  int_method.hpp  long_method.cpp  long_method.hpp  object_method.hpp  short_method.hpp  string_method.hpp
cpp/main/include/ZNBKit/jni/utils/: util.hpp
cpp/main/include/ZNBKit/jvmti/: factory.hpp  jvmti_object.hpp  jvmti_types.hpp
cpp/main/include/jni/: instance.hpp  klass.hpp
cpp/main/include/jni/definitions/: klass_signature.hpp
cpp/main/include/jni/definitions/method/: method_signature.hpp
cpp/main/include/jni/definitions/method/impl/: object_method.hpp  void_method.hpp
cpp/main/include/jni/signatures/: klass_signature.hpp  method_signature.hpp
cpp/main/include/jni/signatures/method/: method_signature.hpp  object_method.hpp  string_method.hpp  void_method.hpp
cpp/main/include/jni/signatures/method/impl/: object_method.hpp  void_method.hpp
cpp/main/include/jni/utils/: Util.hpp  util.hpp
cpp/main/include/jvmti/: jvmti_object.hpp
cpp/main/include/private/ZNBKit/: vm_management.hpp  vm_object.hpp
cpp/main/include/private/ZNBKit/jni/: instance.hpp
cpp/main/include/private/ZNBKit/jni/signatures/: klass_signature.hpp  method_signature.hpp
cpp/main/include/private/ZNBKit/jni/signatures/method/: byte_method.hpp  int_method.hpp  object_method.hpp  short_method.hpp  void_method.hpp
cpp/main/include/private/ZNBKit/jni/utils/: util.hpp
cpp/main/include/private/ZNBKit/jvmti/: jvmti_object.hpp
cpp/main/include/public/: method.hpp
cpp/main/src/: vm_management.cpp  vm_object.cpp
cpp/main/src/jni/: buffer.cpp
cpp/main/src/jni/utils/: util.cpp
cpp/main/src/jvmti/: factory.cpp  jvmti_object.cpp
cpp/src/: main.cpp
cpp/test/: setup.cpp  setup.hpp  test_main.cpp
cpp/test/include/: setup.hpp
cpp/test/include/ZNBKit/: config.hpp  setup.hpp
cpp/test/src/: setup.cpp
cpp/test/src/impl/: signature_test.cpp  vm_test.cpp
include/ZNBKit/: debug.hpp  vm_management.hpp  vm_object.hpp
include/ZNBKit/jni/: instance.hpp
include/ZNBKit/jni/internal/: internal.hpp  natives.hpp  reference.hpp  wrapper.hpp
include/ZNBKit/jni/signatures/: klass_signature.hpp  method_signature.hpp
include/ZNBKit/jni/signatures/method/: byte_method.hpp  int_method.hpp  long_method.hpp  object_method.hpp  short_method.hpp  string_method.hpp  void_method.hpp
include/ZNBKit/jni/utils/: util.hpp
include/ZNBKit/jvmti/: jvmti_factory.hpp  jvmti_object.hpp  jvmti_types.hpp
modules/jni/: CMakeLists.txt
modules/jni/include/ZNBKit/jni/: buffer.hpp  instance.hpp
modules/jni/include/ZNBKit/jni/signatures/: klass_signature.hpp  method_signature.hpp
modules/jni/include/ZNBKit/jni/signatures/method/: byte_method.hpp  int_method.hpp  long_method.hpp  object_method.hpp  short_method.hpp  string_method.hpp  void_method.hpp
modules/jni/src/: buffer.cpp
modules/jvmti/: CMakeLists.txt
modules/jvmti/include/ZNBKit/jvmti/: jvmti_object.hpp
modules/jvmti/src/: jvmti_factory.cpp  jvmti_object.cpp
modules/shared/: CMakeLists.txt
modules/shared/include/ZNBKit/: debug.hpp
modules/shared/include/ZNBKit/internal/: util.hpp  wrapper.hpp
modules/shared/src/internal/: util.cpp  wrapper.cpp
modules/vm/: CMakeLists.txt
modules/vm/include/ZNBKit/vm/: vm_management.hpp
modules/vm/src/: vm_management.cpp  vm_object.cpp
rust/: Cargo.toml
rust/src/: lib.rs
src/main/cpp/: vm_management.cpp  vm_object.cpp
src/main/cpp/jni/internal/: internal.cpp  wrapper.cpp
src/main/cpp/jni/utils/: util.cpp
src/main/cpp/jvmti/: jvmti_factory.cpp  jvmti_object.cpp
src/test/cpp/: setup.cpp
src/test/cpp/impl/: jvmti_test.cpp  signature_test.cpp  vm_test.cpp
src/test/include/ZNBKit/: setup.hpp
tests/include/ZNBKit/: setup.hpp
tests/src/: setup.cpp
tests/src/impl/: jvmti_test.cpp  vm_test.cpp
tools/: Config.cmake  Copy.cmake  Dependencies.cmake  Platform.cmake
